@@ -269,6 +269,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i250   (EXPERIMENTAL)
        Canon PIXMA i320   (EXPERIMENTAL)
+       Canon PIXMA i350   (EXPERIMENTAL)
        Canon PIXMA iP3600 (EXPERIMENTAL)
        Canon PIXMA iP3500 (EXPERIMENTAL)
        Canon PIXMA iP3300 (EXPERIMENTAL)
